# SynAPSeg

./: .gitignore  LICENSE  README.md  pyproject.toml  synapseg_conda_env_cpu.yaml  synapseg_conda_env_gpu.yaml  synapseg_conda_env_mac.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
SynAPSeg/: __main__.py  annotate_script.py  quant_script.py  segmentation_script.py
SynAPSeg/Analysis/: Classification.py  ClassificationInterp.py  Correlation.py  NeighborhoodAnalysis.py  Network.py  __init__.py  analysis_script_base.py  df_utils.py  plotting.py  rpdf_filter.py
SynAPSeg/Annotation/: annotation_IO.py  annotation_core.py  napari_custom_key_bindings.py  napari_utils.py  napari_widget_container.py  napari_widgets.py
SynAPSeg/IO/: BaseConfig.py  BaseDispatcher.py  BasePipelineComponent.py  datasetNodeClass.py  env.py  image_parser.py  metadata_handler.py  project.py  readers.py  writers.py
SynAPSeg/Plugins/: base.py
SynAPSeg/Quantification/: BasePipelineStage.py  __init__.py  dispatcher.py  factory.py  output_handler.py  pipeline.py  validation.py
SynAPSeg/Segmentation/: OutputHandler.py  Pipeline.py  Processing.py  classical_methods_optimizer.py  config_parser.py
SynAPSeg/UI/: main.py  registry.py
SynAPSeg/common/: Logging.py
SynAPSeg/config/: config_templates.yaml  constants.py  initial_setup.py  quantification_default_parameters.yaml  segmentation_default_parameters.yaml
SynAPSeg/models/: base.py  factory.py
SynAPSeg/scripts/: quick_predict.py
SynAPSeg/utils/: utils_ImgDB.py  utils_ML.py  utils_colocalization.py  utils_colocalization_3D.py  utils_czi.py  utils_general.py  utils_geometry.py  utils_image_processing.py  utils_logger.py  utils_plotting.py  utils_stats.py  (+1 more)
(+66 files in other folders)
